cambio a sdk cloud reverso

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 				<environment>prod</environment>
 				<module.instance.type>${default.prod.type}</module.instance.type>
 				<web.xml.filename>web.xml</web.xml.filename>
+				<module.scaling.type><![CDATA[<automatic-scaling/>]]></module.scaling.type>
 			</properties>
 		</profile>
 	</profiles>
@@ -290,7 +291,7 @@
 			</plugin>
 
 			<!-- AppEngine plugin -->
-			<!--<plugin>
+			<plugin>
 				<groupId>com.google.appengine</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
 				<version>${appengine.target.version}</version>
@@ -310,7 +311,7 @@
 						<jvmFlag>-XX:MaxPermSize=512m</jvmFlag>
 					</jvmFlags>
 				</configuration>
-			</plugin>-->
+			</plugin>
 			
 			<plugin>
 	            <groupId>com.google.cloud.tools</groupId>
