--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>mrh-frio</artifactId>
 
 	<!-- VERSION -->
-	<version>r11-0-frio</version>
+	<version>r17-0-calor</version>
 
 	<packaging>war</packaging>
 	<name>${project.artifactId}</name>
@@ -54,9 +54,9 @@
 		<maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
 
 		<!-- Compiler configuration -->
-		<java.source>11</java.source>
-		<java.target>11</java.target>
-		<java.runtime>java11</java.runtime>
+		<java.source>17</java.source>
+		<java.target>17</java.target>
+		<java.runtime>java17</java.runtime>
 		
 		<module>default</module>
 		<module.package>com/${base.package}/**/*.java</module.package>
@@ -172,17 +172,28 @@
 	      <artifactId>jetty-server</artifactId>
 	      <version>${jetty.version}</version>
 	    </dependency>
+	    
 	    <dependency>
 	      <groupId>org.eclipse.jetty</groupId>
 	      <artifactId>jetty-annotations</artifactId>
 	      <version>${jetty.version}</version>
-	    </dependency>	
-    		
+	      <exclusions>
+	      	<exclusion>
+	      	 	<groupId>org.ow2.asm</groupId>
+	     	 	<artifactId>asm</artifactId>
+	 		</exclusion>
+	 		<exclusion>
+	      	 	<groupId>org.ow2.asm</groupId>
+	     	 	<artifactId>asm-commons</artifactId>
+	 		</exclusion>
+	      </exclusions>
+	    </dependency>	 
+    		<!--
 		<dependency>
 		    <groupId>org.eclipse.persistence</groupId>
 		    <artifactId>javax.persistence</artifactId>
 		    <version>2.0.0</version>
-		</dependency>
+		</dependency>-->
 	
 		<!-- Spring -->
 		<dependency>
